--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "asl-recognition-app",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
+  "description": "Indian Sign Language Translator using React, Vite, and TensorFlow.js",
+  "homepage": "https://shovidhyan.github.io/Indian-Sign-Language-Translator/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google-cloud/translate": "^8.0.2",
@@ -29,6 +33,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
