Your latest update message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Shovidhyan/Signs.git",
+  "homepage": "https://github.com/Shovidhyan/Signs-to-Speech.git",
   "name": "asl-recognition-app",
   "version": "1.0.0",
   "private": true,
